--- a/poster-scientifique.html
+++ b/poster-scientifique.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="static/css/navbar.css">
     <link rel="stylesheet" href="static/css/index.css">
 
-    <title>Justice & Big Data | acceuil</title>
+    <title>Justice & Big Data | poster</title>
 
 </head>
 <body>
@@ -68,23 +68,7 @@
     </nav>
 
     <main id="main">
-        <article id="art1">
-            <div class="thumbnail" alt="vignette du premier article (Justice et Big Data)"></div>
-            <div class="description">
-                <h1 class="description-title">introduction</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi iaculis a risus sed luctus. Donec ut semper leo, a tincidunt nibh. In quis augue mi. Duis porttitor auctor nunc nec commodo. Mauris velit purus, sagittis sed eros a, rhoncus mattis quam. Nam eu velit maximus, condimentum neque sed, consequat eros. Nulla feugiat elit luctus, aliquet risus a, venenatis lectus. Suspendisse ac nisi porttitor, porttitor lectus eu, tempus neque. Curabitur non diam semper, sodales dolor sit amet, ornare mauris. Donec justo augue, convallis sit amet scelerisque a, pretium non augue. Nunc laoreet pretium lectus, sed iaculis nisl vestibulum eget. Proin pretium, nulla eu molestie faucibus, elit neque facilisis augue, vel viverra mi ipsum facilisis orci. </p>
-                <p>Suspendisse elementum dui ac risus rhoncus mattis. Morbi venenatis et purus ut vestibulum. Vivamus nunc nunc, bibendum id ultricies ornare, accumsan vel neque. Vivamus velit arcu, volutpat a enim eu, luctus ultrices odio. Cras sagittis gravida congue. Mauris quis lacus imperdiet, convallis quam ut, vulputate odio. Etiam malesuada feugiat est a lacinia. </p>
-            </div>
-        </article>
-        <article id="art2">
-            <div class="thumbnail" alt="vignette du deuxième article (algorithmes et IA)"></div>
-            <div class="description">
-                <h1 class="description-title">Algorithmes et Intelligence Artificielle</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi iaculis a risus sed luctus. Donec ut semper leo, a tincidunt nibh. In quis augue mi. Duis porttitor auctor nunc nec commodo. Mauris velit purus, sagittis sed eros a, rhoncus mattis quam. Nam eu velit maximus, condimentum neque sed, consequat eros. Nulla feugiat elit luctus, aliquet risus a, venenatis lectus. Suspendisse ac nisi porttitor, porttitor lectus eu, tempus neque. Curabitur non diam semper, sodales dolor sit amet, ornare mauris. Donec justo augue, convallis sit amet scelerisque a, pretium non augue. Nunc laoreet pretium lectus, sed iaculis nisl vestibulum eget. Proin pretium, nulla eu molestie faucibus, elit neque facilisis augue, vel viverra mi ipsum facilisis orci. </p>
-                <p>Nunc consectetur urna sed metus consectetur, eget ornare tortor convallis. Aliquam in nisi eu ante interdum porttitor. Suspendisse non sapien est. Morbi ultricies felis nulla, ac mollis tellus tristique ac. Maecenas hendrerit ligula id mi pulvinar imperdiet. Aliquam pellentesque risus ut elit mollis, nec dignissim leo ultrices. Donec faucibus mauris vel luctus consectetur. Phasellus luctus volutpat mauris, nec scelerisque libero ultrices sit amet. Sed sit amet finibus ipsum. Integer id mauris dictum, hendrerit erat vel, elementum velit. Morbi blandit rhoncus nisl quis laoreet. Maecenas eu elit id elit molestie consequat sed id dolor. Cras viverra, ante in pretium laoreet, diam augue pretium arcu, quis suscipit nibh eros non ante. </p>
-                <p>Suspendisse elementum dui ac risus rhoncus mattis. Morbi venenatis et purus ut vestibulum. Vivamus nunc nunc, bibendum id ultricies ornare, accumsan vel neque. Vivamus velit arcu, volutpat a enim eu, luctus ultrices odio. Cras sagittis gravida congue. Mauris quis lacus imperdiet, convallis quam ut, vulputate odio. Etiam malesuada feugiat est a lacinia. </p>
-            </div>
-        </article>
+        
     </main>
 
     <footer id="footer">
