--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <nav id="navbar">
         <ul>
-            <li class="left-box uppercase fw700">
+            <li class="left-box uppercase fw300 montserrat">
                 <ul>
                     <li>
                         <a class="underline-onhover" href="index.html">accueil</a>
@@ -108,23 +108,23 @@
             <li class="uppercase fw300">
                 <ul>
                     <li>
-                        <a class="underline-onhover" href="">condition d'utilisateurs</a>
+                        <a class="underline-onhover" href="#">condition d'utilisateurs</a>
                     </li>
                     <li>
-                        <a class="underline-onhover" href="">politique de confidentialité</a>
+                        <a class="underline-onhover" href="#">politique de confidentialité</a>
                     </li>
                     <li>
-                        <a class="underline-onhover" href="">à propos</a>
+                        <a class="underline-onhover" href="#">à propos</a>
                     </li>
                 </ul>
             </li>
             <li class="uppercase fw300">
                 <ul>
                     <li>
-                        <a class="underline-onhover" href="">faq</a>
+                        <a class="underline-onhover" href="#">faq</a>
                     </li>
                     <li>
-                        <a class="underline-onhover" href="">support</a>
+                        <a class="underline-onhover" href="#">support</a>
                     </li>
                 </ul>
             </li>
