--- a/sources.html
+++ b/sources.html
@@ -10,9 +10,9 @@
 
     <link rel="stylesheet" href="static/css/styles.css">
     <link rel="stylesheet" href="static/css/font.css">
-    <link rel="stylesheet" href="static/css/custom_cusor.css">
+    <link rel="stylesheet" href="static/css/cursor_event.css">
     <link rel="stylesheet" href="static/css/navbar.css">
-    <link rel="stylesheet" href="static/css/index.css">
+    <link rel="stylesheet" href="static/css/sources.css">
 
     <title>Justice & Big Data | sources</title>
 
@@ -68,7 +68,42 @@
     </nav>
 
     <main id="main">
-        
+        <article id="art1">
+            <p>
+                « Comprendre la justice algorithmisée | Variances ». Publié par <a class="art-link" href="https://variances.eu/?author=371">Aurélie Jean</a> | 29/12/2021. Disponible: <a class="art-link" href="https://variances.eu/?p=6098">ici</a>, et <a class="art-link" href="https://variances.eu/?p=6098">là</a>
+            </p>
+            <p>
+                Mots-clés : Évaluation des risques
+            </p>
+            <p>
+                Cet article soutient l’idée que les big data pourraient améliorer l’équité et l’efficacité du système judiciaire en réduisant les biais humains.
+                Mais cela soulève aussi des craintes, car l’algorithme peut reproduire ou amplifier des biais présents dans les données initiales.
+            </p>
+            <p>
+                Selon l’article, les outils pourraient aider les juges à prendre des décisions plus informées, fondées sur des données et des tendances.
+            </p>
+            <p>
+                Cela pose une question éthique : un algorithme peut-il réellement prendre en compte la complexité d’un cas individuel ? 
+            </p>
+        </article>
+
+        <article id="art2">
+            <p>
+                « La justice à l’heure des algorithmes et du big data », CNRS Le journal. 28.04.2017, par <a class="art-link" href="https://lejournal.cnrs.fr/auteurs/fabien-trecourt">Fabien Trécourt</a>. Disponible: <a class="art-link" href="https://lejournal.cnrs.fr/articles/la-justice-a-lheure-des-algorithmes-et-du-big-data">ici</a>
+            </p>
+            <p>
+                Mots-clés : Automatisation
+            </p>
+            <p>
+                L'article questionne l'idée de remplacer des professionnels du droit par des algorithmes ou des robots. Il montre que, bien que des outils numériques puissent assister la justice (par exemple, avec des prédictions ou des analyses de données), remplacer complètement l'humain reste, pour l’instant, hors de portée.
+            </p>
+            <p>
+                Il réduit certaines craintes exagérées d’une justice totalement déshumanisée en expliquant que la complexité des cas judiciaires dépasse ce que les algorithmes actuels peuvent gérer.
+            </p>
+            <p>
+                Il rappelle cependant que l’automatisation croissante soulève des défis éthiques sur le rôle de l’humain dans la prise de décisions. 
+            </p>
+        </article>
     </main>
 
     <footer id="footer">
