--- a/poster-scientifique.html
+++ b/poster-scientifique.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="static/css/styles.css">
     <link rel="stylesheet" href="static/css/font.css">
-    <link rel="stylesheet" href="static/css/custom_cusor.css">
+    <link rel="stylesheet" href="static/css/cursor_event.css">
     <link rel="stylesheet" href="static/css/navbar.css">
     <link rel="stylesheet" href="static/css/index.css">
 
