--- a/sources.html
+++ b/sources.html
@@ -69,40 +69,160 @@
 
     <main id="main">
         <article id="art1">
-            <p>
-                « Comprendre la justice algorithmisée | Variances ». Publié par <a class="art-link" href="https://variances.eu/?author=371">Aurélie Jean</a> | 29/12/2021. Disponible: <a class="art-link" href="https://variances.eu/?p=6098">ici</a>, et <a class="art-link" href="https://variances.eu/?p=6098">là</a>
-            </p>
-            <p>
-                Mots-clés : Évaluation des risques
-            </p>
-            <p>
-                Cet article soutient l’idée que les big data pourraient améliorer l’équité et l’efficacité du système judiciaire en réduisant les biais humains.
-                Mais cela soulève aussi des craintes, car l’algorithme peut reproduire ou amplifier des biais présents dans les données initiales.
-            </p>
-            <p>
-                Selon l’article, les outils pourraient aider les juges à prendre des décisions plus informées, fondées sur des données et des tendances.
-            </p>
-            <p>
-                Cela pose une question éthique : un algorithme peut-il réellement prendre en compte la complexité d’un cas individuel ? 
-            </p>
+            <div class="drop-btn">
+                <p class="source-title">
+                    « Comprendre la justice algorithmisée | Variances »
+                </p>
+                <span onclick="drop(this)">
+                    <p class="btn-icon">+</p>
+                </span>
+            </div>
+            <div class="dropbox">
+                <p>
+                    Publié par <a class="art-link" href="https://variances.eu/?author=371">Aurélie Jean</a> | 29/12/2021. Disponible: <a class="art-link" href="https://variances.eu/?p=6098">ici</a>, et <a class="art-link" href="https://variances.eu/?p=6098">là</a>
+                </p>
+                <p>
+                    Mots-clés : Évaluation des risques
+                </p>
+                <p>
+                    Cet article soutient l’idée que les big data pourraient améliorer l’équité et l’efficacité du système judiciaire en réduisant les biais humains.
+                    Mais cela soulève aussi des craintes, car l’algorithme peut reproduire ou amplifier des biais présents dans les données initiales.
+                </p>
+                <p>
+                    Selon l’article, les outils pourraient aider les juges à prendre des décisions plus informées, fondées sur des données et des tendances.
+                </p>
+                <p>
+                    Cela pose une question éthique : un algorithme peut-il réellement prendre en compte la complexité d’un cas individuel ? 
+                </p>
+            </div>
         </article>
 
         <article id="art2">
-            <p>
-                « La justice à l’heure des algorithmes et du big data », CNRS Le journal. 28.04.2017, par <a class="art-link" href="https://lejournal.cnrs.fr/auteurs/fabien-trecourt">Fabien Trécourt</a>. Disponible: <a class="art-link" href="https://lejournal.cnrs.fr/articles/la-justice-a-lheure-des-algorithmes-et-du-big-data">ici</a>
-            </p>
-            <p>
-                Mots-clés : Automatisation
-            </p>
-            <p>
-                L'article questionne l'idée de remplacer des professionnels du droit par des algorithmes ou des robots. Il montre que, bien que des outils numériques puissent assister la justice (par exemple, avec des prédictions ou des analyses de données), remplacer complètement l'humain reste, pour l’instant, hors de portée.
-            </p>
-            <p>
-                Il réduit certaines craintes exagérées d’une justice totalement déshumanisée en expliquant que la complexité des cas judiciaires dépasse ce que les algorithmes actuels peuvent gérer.
-            </p>
-            <p>
-                Il rappelle cependant que l’automatisation croissante soulève des défis éthiques sur le rôle de l’humain dans la prise de décisions. 
-            </p>
+            <div class="drop-btn">
+                <p class="source-title">
+                    « La justice à l’heure des algorithmes et du big data »
+                </p>
+                <span onclick="drop(this)">
+                    <p class="btn-icon">+</p>
+                </span>
+            </div>
+            <div class="dropbox">
+                <p>
+                    CNRS Le journal. 28.04.2017, par <a class="art-link" href="https://lejournal.cnrs.fr/auteurs/fabien-trecourt">Fabien Trécourt</a>. Disponible: <a class="art-link" href="https://lejournal.cnrs.fr/articles/la-justice-a-lheure-des-algorithmes-et-du-big-data">ici</a>
+                </p>
+                <p>
+                    Mots-clés : Automatisation
+                </p>
+                <p>
+                    L'article questionne l'idée de remplacer des professionnels du droit par des algorithmes ou des robots. Il montre que, bien que des outils numériques puissent assister la justice (par exemple, avec des prédictions ou des analyses de données), remplacer complètement l'humain reste, pour l’instant, hors de portée.
+                </p>
+                <p>
+                    Il réduit certaines craintes exagérées d’une justice totalement déshumanisée en expliquant que la complexité des cas judiciaires dépasse ce que les algorithmes actuels peuvent gérer.
+                </p>
+                <p>
+                    Il rappelle cependant que l’automatisation croissante soulève des défis éthiques sur le rôle de l’humain dans la prise de décisions.
+                </p>
+            </div>
+        </article>
+
+        <article id="art3">
+            <div class="drop-btn">
+                <p class="source-title">
+                    « La régulation des algorithmes, entre éthique, droit et process | Ministère de la justice »
+                </p>
+                <span onclick="drop(this)">
+                    <p class="btn-icon">+</p>
+                </span>
+            </div>
+            <div class="dropbox">
+                <p>
+                    20 juin 2018. Disponible: <a class="art-link" href="https://www.justice.gouv.fr/actualites/actualite/regulation-algorithmes-entre-ethique-droit-process">ici</a>
+                </p>
+                <p>
+                    Mots-clés : Régulation
+                </p>
+                <p>
+                    Cet article rajoute à la controverse l’idée des tensions entre les approches classiques du droit et les nouveaux défis posés par les technologies numériques.
+                </p>
+                <p>
+                    Il met en avant l’importance de créer des cadres éthiques et juridiques solides pour réguler les algorithmes dans la justice, tout en adaptant les méthodes traditionnelles aux réalités du numérique.
+                </p>
+            </div>
+        </article>
+
+        <article id="art4">
+            <div class="drop-btn">
+                <p class="source-title">
+                    « Mécanisme d’une justice algorithmisée »
+                </p>
+                <span onclick="drop(this)">
+                    <p class="btn-icon">+</p>
+                </span>
+            </div>
+            <div class="dropbox">
+                <p>
+                    Fondation Jean-Jaurès. 22/06/2021 Adrien Basdevant, <a class="art-link" href="https://www.jean-jaures.org/expert/aurelie-jean/">Aurélie Jean</a>, Victor Storchan. Disponible: <a class="art-link" href="https://www.jean-jaures.org/publication/mecanisme-dune-justice-algorithmisee/">ici</a>
+                </p>
+                <p>
+                    Mots-clés : Décision judiciaire
+                </p>
+                <p>
+                    Cet article met particulièrement l'accent sur la manière dont les méthodes implicites d’apprentissage automatique influencent la logique même des décisions judiciaires. Ce qui enrichit la controverse en soulignant que l’automatisation peut changer les outils utilisés, mais aussi les fondements de base la réflexion juridique.
+                </p>
+                <p>
+                    Il ajoute aussi une réflexion sur l’acceptabilité sociale de ces changements, en questionnant si les citoyens peuvent faire confiance à des décisions issus d’algorithmes.
+                </p>
+            </div>
+        </article>
+
+        <article id="art5">
+            <div class="drop-btn">
+                <p class="source-title">
+                    « Sécurité et justice : le défi de l’intelligence artificielle » 
+                </p>
+                <span onclick="drop(this)">
+                    <p class="btn-icon">+</p>
+                </span>
+            </div>
+            <div class="dropbox">
+                <p>
+                    Ministère de la justice ».Publié le 14 octobre 2019. Disponible: <a class="art-link" href="https://www.justice.gouv.fr/actualites/actualite/securite-justice-defi-lintelligence-artificielle">ici</a>
+                </p>
+                <p>
+                    Mots-clés : Intelligence artificielle
+                </p>
+                <p>
+                    Cet article apporte une idée nouvelle en montrant que l’intelligence artificielle ne transforme pas seulement les décisions, mais aussi la façon dont les institutions de justice et de sécurité fonctionnent au quotidien. Cela peut changer les rôles des professionnels et créer des tensions dans l’organisation.
+                </p>
+                <p>
+                    Il souligne aussi que ces technologies influencent nos modes de vie et la manière dont les citoyens perçoivent la justice, en introduisant des changements dans toute la société, pas juste dans les tribunaux.
+                </p>
+            </div>
+        </article>
+
+        <article id="art6">
+            <div class="drop-btn">
+                <p class="source-title">
+                    « Forks Over Knives: Predictive Inconsistency in Criminal Justice Algorithmic Risk Assessment Tools » 
+                </p>
+                <span onclick="drop(this)">
+                    <p class="btn-icon">+</p>
+                </span>
+            </div>
+            <div class="dropbox">
+                <p>
+                    T. Greene, G. Shmueli, J. Fell, C.-F. Lin, et H.-W. Liu, 22 septembre 2022, arXiv: arXiv:2012.00289. doi: <a class="art-link" href="10.48550/arXiv.2012.00289.">10.48550/arXiv.2012.00289.</a>
+                </p>
+                <p>
+                    Mots-clés : Incohérence prédictive
+                </p>
+                <p>
+                    Ce court article examine les incohérences prédictives dans les outils algorithmiques d'évaluation des risques. Les auteurs montrent qu’avec des choix différents lors du développement et du déploiement de ces outils, ces derniers peuvent conduire à des scores de risque différents pour un même individu.
+                </p>
+                <p>
+                    L’article montre les implications éthiques de ces incohérences, notamment pour l’équité des décisions judiciaires
+                </p>
+            </div>
         </article>
     </main>
 
