--- a/poster-scientifique.html
+++ b/poster-scientifique.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="static/css/font.css">
     <link rel="stylesheet" href="static/css/cursor_event.css">
     <link rel="stylesheet" href="static/css/navbar.css">
-    <link rel="stylesheet" href="static/css/index.css">
+    <link rel="stylesheet" href="static/css/poster_scientifique.css">
 
     <title>Justice & Big Data | poster</title>
 
@@ -68,7 +68,10 @@
     </nav>
 
     <main id="main">
-        
+        <article class="montserrat fw300">
+            <img class="poster" src="static/img/poster.png" alt="Poster Scientifique - Justice et Big Data">
+            <p>Pour plus de détails, consultez la section <a class="art-link" href="sources.html">sources</a>.</p>
+        </article>
     </main>
 
     <footer id="footer">
