add a loading screen

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="static/css/styles.css">
     <link rel="stylesheet" href="static/css/font.css">
+    <link rel="stylesheet" href="static/css/loading.css">
     <link rel="stylesheet" href="static/css/cursor_event.css">
     <link rel="stylesheet" href="static/css/navbar.css">
     <link rel="stylesheet" href="static/css/index.css">
@@ -18,6 +19,18 @@
 
 </head>
 <body>
+
+    <div class="loading montserrat">
+        <h1 class="loading-title fw200">SAE</h1>
+        <div class="cpt">
+            <div class="slider">
+                <h1 class="fw200">1.05</h1>
+                <h1 class="fw600">1.06</h1>
+                <h1 class="fw200">1.07</h1>
+                <h1 class="fw200">1.08</h1>
+            </div>
+        </div>
+    </div>
     
     <nav id="navbar">
         <ul>
