update the footer and the readme

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </li>
         </ul>
         <div class="copyrights montserrat">
-            <p>&copy; 2024 hchamrouk.com. Tous droits réservés.</p>
+            <p>&copy; 2024 <a href="https://hchamrouk.com">hchamrouk.com</a>. Tous droits réservés.</p>
             <p>123 Rue de l'Informatique, 75001 Paris, France</p>
             <p>+33 1 23 45 67 89</p>
         </div>
