add a new html page to develop our subject, update README.md, add 4 images to match each articles, update the navbar, the user now knows which page he's on, add a sub menu (below the first link) to link our new html page

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
         <ul>
             <li class="left-box uppercase fw300 montserrat">
                 <ul>
-                    <li>
-                        <a class="underline-onhover" href="index.html">accueil</a>
+                    <li class="active-hidden-link">
+                        <a class="underline-onhover current-page" href="index.html">accueil</a>
+                        <a class="underline-onhover hidden-link" href="developpement.html">developpement</a>
                     </li>
                     <li>
                         <a class="underline-onhover" href="poster-scientifique.html">poster scientifique</a>
@@ -95,7 +96,7 @@
                 <h1 class="description-title">Les Algorithmes et l'Intelligence Artificielle</h1>
                 <p>Les algorithmes sont le cœur battant de l’intelligence artificielle, responsables de son fonctionnement et de sa prise de décision. Ces suites d'instructions permettent aux machines d’analyser des quantités massives de données, d’en tirer des modèles et de fournir des résultats en un temps record. Pourtant, cette capacité impressionnante soulève des préoccupations, notamment concernant leur transparence et leur biais. Les algorithmes, bien que programmés par des humains, peuvent refléter des préjugés ou des erreurs inhérentes à leurs créateurs, impactant négativement des secteurs comme le recrutement, la justice ou encore l’accès aux services financiers.</p>
                 <p>En matière d’intelligence artificielle, le défi n’est pas uniquement technique, mais aussi sociétal. Les décisions automatisées par des algorithmes peuvent avoir des conséquences durables, tant au niveau individuel que collectif. Par exemple, les systèmes de recommandation sur Internet façonnent nos choix et influencent même nos comportements. De plus, dans le domaine de la surveillance, l’utilisation des algorithmes dans les caméras intelligentes ou les systèmes de reconnaissance faciale soulève de sérieuses questions sur la vie privée et les libertés individuelles. Comment s’assurer que ces outils, aussi puissants soient-ils, servent des objectifs éthiques et inclusifs ?</p>
-                <p>Les algorithmes, bien qu’essentiels à l’IA, doivent être développés avec prudence pour éviter les biais et préserver nos droits fondamentaux.</p>
+                <p>Ainsi les algorithmes utilisés dans l’intelligence artificielle incarnent une révolution technologique majeure, mais posent également des défis éthiques et sociaux essentiels pour notre société.</p>
             </div>
         </article>
     </main>
