--- a/poster-scientifique.html
+++ b/poster-scientifique.html
@@ -23,11 +23,12 @@
         <ul>
             <li class="left-box uppercase fw300 montserrat">
                 <ul>
-                    <li>
+                    <li class="active-hidden-link">
                         <a class="underline-onhover" href="index.html">accueil</a>
+                        <a class="underline-onhover hidden-link" href="developpement.html">developpement</a>
                     </li>
                     <li>
-                        <a class="underline-onhover" href="poster-scientifique.html">poster scientifique</a>
+                        <a class="underline-onhover current-page" href="poster-scientifique.html">poster scientifique</a>
                     </li>
                     <li>
                         <a class="underline-onhover" href="formulaire.html">formulaire</a>
