--- a/formulaire.html
+++ b/formulaire.html
@@ -23,14 +23,15 @@
         <ul>
             <li class="left-box uppercase fw300 montserrat">
                 <ul>
-                    <li>
+                    <li class="active-hidden-link">
                         <a class="underline-onhover" href="index.html">accueil</a>
+                        <a class="underline-onhover hidden-link" href="developpement.html">developpement</a>
                     </li>
                     <li>
                         <a class="underline-onhover" href="poster-scientifique.html">poster scientifique</a>
                     </li>
                     <li>
-                        <a class="underline-onhover" href="formulaire.html">formulaire</a>
+                        <a class="underline-onhover current-page" href="formulaire.html">formulaire</a>
                     </li>
                     <li>
                         <a class="underline-onhover" href="sources.html">sources</a>
