add dev page to the footer

--- a/formulaire.html
+++ b/formulaire.html
@@ -152,6 +152,9 @@
                         <a class="underline-onhover" href="index.html">accueil</a>
                     </li>
                     <li>
+                        <a class="underline-onhover" href="developpement.html">developpement</a>
+                    </li>
+                    <li>
                         <a class="underline-onhover" href="poster-scientifique.html">poster scientifique</a>
                     </li>
                     <li>
